Add checks for states existing in device.
(avoids state not found error, if different serverrs have different results...)