@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>PluginVersion</key>
-	<string>0.0.6</string>
+	<string>0.0.7</string>
 	<key>ServerApiVersion</key>
 	<string>2.0.0</string>
 	<key>IwsApiVersion</key>
